# os-design

./: workspace.code-workspace
bootloader/: Cargo.toml  memory.x  openocd.cfg  openocd.gdb
bootloader/docs/: grandplot.dot
bootloader/src/: flasher.rs  main.rs
demoapp/: Cargo.toml  link.x  memory.x  openocd.cfg
demoapp/.cargo/: config.toml
demoapp/src/: main.rs  stdlib.rs
demoapp2/: .gitignore  build.sh  kernel.ld  main.c  out  out.elf  out.elf.id0  out.elf.id1  out.elf.nam  out.hex  out2  stdlib.h
docs/: grandplot.dot  memory_layout.md
docs/bootloader/: flashmodeplot.dot  grandplot.dot
docs/os/: README.md  context_switch.dot  info.md  notes.txt  plot.dot  syscall_abi.md  system_call.dot  task_scheduler.md
docs/presentation/: .gitignore  presentation.tex  tock.bib
os/: Cargo.toml  memory.x  openocd.cfg  rust-toolchain.toml
os/.cargo/: config.toml
os/src/: logger.rs  main.rs  structs.rs  syscall_provider.rs  task_scheduler.rs  usb_hid.rs
os/src/utils/: mod.rs  mpu.rs  npriv.rs
try/app/: Cargo.toml
try/app/src/: main.rs
