[package]
name = "chocos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.4", features = ["linker-plugin-lto"] }
cortex-m-rt = { version = "0.7.1", features = ["device"] }
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
panic-semihosting = { version = "0.5.6", features = ["exit"] }
embedded-hal = "0.2.6"
usb-device = "0.2.8"
usbd-hid = "0.5.2"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.

[dependencies.stm32f1xx-hal]
version = "0.8.0"
features = ["rt", "stm32f103", "high"]

[dependencies.stm32f1]
version = "0.14.0"
features = ["stm32f103"]

# this lets you use `cargo fix`!
[[bin]]
name = "chocos"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "s" # better optimizations
